02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/build/log/idf_py_stdout_output_55663
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/build/bootloader/esp-idf/esptool_py && /Users/wangjiaqi/.espressif/python_env/idf5.2_py3.13_env/bin/python /Users/wangjiaqi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/build/bootloader/bootloader.bin
Bootloader binary size 0x68b0 bytes. 0x750 bytes (7%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/002_PCM_Control.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/002_PCM_Control.c.obj 
/Users/wangjiaqi/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/build/config -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/main -I/Users/wangjiaqi/esp/esp-idf/components/newlib/platform_include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/wangjiaqi/esp/esp-idf/components/heap/include -I/Users/wangjiaqi/esp/esp-idf/components/log/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/platform_port/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32 -I/Users/wangjiaqi/esp/esp-idf/components/esp_common/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/private -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/include -I/Users/wangjiaqi/esp/esp-idf/components/xtensa/deprecated_include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/wangjiaqi/esp/esp-idf/components/lwip/lwip/src/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/freertos/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/sd_spi/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated -I/Users/wangjiaqi/esp/esp-idf/components/driver/analog_comparator/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/dac/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/gpio/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/gptimer/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2s/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/ledc/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/mcpwm/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/parlio/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/pcnt/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/rmt/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sdio_slave/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/sigma_delta/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/spi/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/twai/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/uart/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_pm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_ringbuf/include -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/max98357/include -I/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/button/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control=. -fmacro-prefix-map=/Users/wangjiaqi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/002_PCM_Control.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/002_PCM_Control.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/002_PCM_Control.c.obj -c /Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/main/002_PCM_Control.c
/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/main/002_PCM_Control.c:10:21: error: static declaration of 'i2sHandle' follows non-static declaration
   10 | static TaskHandle_t i2sHandle = NULL;
      |                     ^~~~~~~~~
In file included from /Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/main/002_PCM_Control.c:6:
/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/max98357/include/max98357.h:5:21: note: previous declaration of 'i2sHandle' with type 'TaskHandle_t' {aka 'struct tskTaskControlBlock *'}
    5 | extern TaskHandle_t i2sHandle;
      |                     ^~~~~~~~~
[5/11] Building C object esp-idf/max98357/CMakeFiles/__idf_max98357.dir/max98357.c.obj
In file included from /Users/wangjiaqi/esp/esp-idf/components/driver/deprecated/driver/i2s.h:23,
                 from /Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/max98357/max98357.c:5:
/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated/driver/i2s.h:27:2: warning: #warning "This set of I2S APIs has been deprecated, please include 'driver/i2s_std.h', 'driver/i2s_pdm.h' or 'driver/i2s_tdm.h' instead. if you want to keep using the old APIs and ignore this warning, you can enable 'Suppress leagcy driver deprecated warning' option under 'I2S Configuration' menu in Kconfig" [-Wcpp]
   27 | #warning "This set of I2S APIs has been deprecated, \
      |  ^~~~~~~
/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/max98357/max98357.c: In function 'i2s_init':
/Users/wangjiaqi/Documents/Github/esp32-develop-board/02.Software/02_ESP-IDF/007_I2S/002_PCM_Control/components/max98357/max98357.c:67:9: warning: 'I2S_COMM_FORMAT_I2S_MSB' is deprecated [-Wdeprecated-declarations]
   67 |         .communication_format = I2S_COMM_FORMAT_I2S_MSB,
      |         ^
In file included from /Users/wangjiaqi/esp/esp-idf/components/driver/deprecated/driver/i2s.h:20:
/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated/driver/i2s_types_legacy.h:89:5: note: declared here
   89 |     I2S_COMM_FORMAT_I2S_MSB   __attribute__((deprecated)) = 0x01, /*!< I2S format MSB, (I2S_COMM_FORMAT_I2S |I2S_COMM_FORMAT_I2S_MSB) correspond to `I2S_COMM_FORMAT_STAND_I2S`*/
      |     ^~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
